--- a/github/index.html
+++ b/github/index.html
@@ -70,6 +70,7 @@
       gltf-model="#boxing" 
       gps-entity-place="latitude:36.14457974518532; longitude: 139.38273580507678;"
       scale="0.5 0.5 0.5"
+      position="-2 8 -2"
       animation-mixer  
       ></a-entity>
 
